--- a/anx/js-css/dark.css
+++ b/anx/js-css/dark.css
@@ -2,7 +2,7 @@ body {
     background-color: #333;
   }
 
-  h2,h4 {
+  h1,h2,h3,h4,h4,h5,h6 {
     color: #fff;
   }
 
@@ -13,3 +13,6 @@ body {
   label {
     color: #fff;
   }
+  .card {
+    background-color: #333;
+ }
